Replace our GC JVM args with the default vanilla ones